@@ -888,12 +888,6 @@ ZorbaErrorCode ZDDY0029_INDEX_POINT_GENERAL_PROBE_NOT_ALLOWED( "ZDDY0029" );
 ZorbaErrorCode ZDDY0030_INDEX_RANGE_GENERAL_PROBE_NOT_ALLOWED( "ZDDY0030" );
 
 
-ZorbaErrorCode ZDDY0034_INDEX_RANGE_VALUE_PROBE_BAD_KEY_TYPES( "ZDDY0034" );
-
-
-ZorbaErrorCode ZDDY0035_INDEX_GENERAL_INSERT( "ZDDY0035" );
-
-
 ZorbaErrorCode ZDDY0031_IC_NOT_DECLARED( "ZDDY0031" );
 
 
@@ -901,6 +895,15 @@ ZorbaErrorCode ZDDY0032_IC_NOT_ACTIVATED( "ZDDY0032" );
 
 
 ZorbaErrorCode ZDDY0033_IC_NOT_MET( "ZDDY0033" );
+
+
+ZorbaErrorCode ZDDY0034_INDEX_RANGE_VALUE_PROBE_BAD_KEY_TYPES( "ZDDY0034" );
+
+
+ZorbaErrorCode ZDDY0035_INDEX_GENERAL_INSERT( "ZDDY0035" );
+
+
+ZorbaErrorCode ZDDY0036_NON_ROOT_NODE_DELETION( "ZDDY0036" );
 
 
 ZorbaErrorCode ZDST0001_COLLECTION_ALREADY_DECLARED( "ZDST0001" );
